# GroupBuilder

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  INCREMENTAL_SOLVER.md  README.md  TEST_SETUP.md  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  generate_test_data.py  test_participants.xlsx
.claude/: WORKTREE_HANDOFF.md  settings.local.json
.claude/skills/: README.md
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  deploy-backend.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/templates/: spec-template.md
agent_docs/: architecture.md  deployment.md  frontend_design.md  testing.md
api/: .env.example  GroupBuilderTemplate.xlsx  app.py  pyproject.toml
api/scripts/: add_bb_admin.py
api/src/api/: email.py  firebase_admin.py  main.py  storage.py
api/src/api/middleware/: __init__.py  auth.py  request_id.py
api/src/api/routers/: admin.py  admin_org_details.py  assignments.py  invites.py  roster.py  upload.py  user.py
api/src/api/services/: __init__.py  email_service.py  firestore_service.py  roster_service.py  session_storage.py
api/src/api/templates/: facilitator_invite_email.html  facilitator_invite_email.txt  magic_link_email.html  magic_link_email.txt
api/src/api/utils/: dataframe_to_participant_dict.py  seating_arrangement.py
api/tests/: __init__.py  conftest.py  test_assignments.py  test_auth_middleware.py  test_firestore_service.py  test_rate_limiting.py  test_roster.py  test_roster_service.py  test_seating_arrangements.py  test_storage.py  test_upload.py
assignment_logic/: pyproject.toml
assignment_logic/src/assignment_logic/: api_handler.py  assignments.py  dataframe_to_participant_dict.py  group_builder.py
assignment_logic/tests/: __init__.py  test_group_builder.py
backend/: main.py  pyproject.toml
docs/: constitution.md  firebase-email-auth-investigation.md  frontend-test-failures-2026-01-24.md  help-page-review.html  session-handoff-2026-01-20.md  styling-framework-proposal.md
docs/archive/: BACKEND_PLAN.md  CODE_REVIEW.md  MEDIUM_EFFORT_COMPLETED.md  PRIORITY_2_COMPLETED.md  QUICK_FIXES_COMPLETED.md  SECURITY_FIXES.md
docs/design/: roster-pdf-export.md
docs/guides/: DEPLOYMENT.md  TESTING.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: _redirects  (+3 more)
group_builder/: pyproject.toml
(+98 files in other folders)
