[tool.poetry]
name = "group-builder-api"
version = "0.1.0"
description = ""
authors = ["Mark Frankle <mark@frankle.fyi>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
group-builder = { path = "../group_builder" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
