[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mark Frankle <mark@frankle.fyi>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
assignment-logic = {path = "../assignment_logic"}
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
