[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mark Frankle <mark@frankle.fyi>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
debugpy = "^1.8.9"
gunicorn = "^23.0.0"
redis = "^5.0.0"
upstash-redis = "^0.15.0"
sendgrid = "^6.11.0"
jinja2 = "^3.1.0"
slowapi = "^0.1.9"
assignment-logic = {path = "../assignment_logic"}

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.9"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
