[tool.poetry]
name = "assignment-logic"
version = "0.1.0"
description = ""
authors = ["Mark <mark@mark.fyi>"]
packages = [{ include = "assignment_logic", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.11.4210"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"        # For testing
mypy = "^1.0"          # For type checking
flake8 = "^6.0"        # For linting
black = "^24.10.0"     # For formatting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
