[tool.poetry]
name = "assignments"
version = "0.1.0"
description = ""
authors = ["Mark Frankle <mark@frankle.fyi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.11.4210"
flask-cors = "^5.0.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
